# github-hot-hub

./: .env.example  .gitignore  README.md  pyproject.toml
data/: notified_repos.json  snapshot_2026-04-07.json  snapshot_2026-04-08.json  snapshot_2026-04-09.json  snapshot_2026-04-10.json  snapshot_2026-04-11.json  snapshot_2026-04-12.json  snapshot_2026-04-13.json  snapshot_2026-04-14.json  snapshot_2026-04-15.json  snapshot_2026-04-16.json  snapshot_2026-04-17.json  snapshot_2026-04-18.json  snapshot_2026-04-19.json  snapshot_2026-04-20.json  snapshot_2026-04-21.json  snapshot_2026-04-22.json  snapshot_2026-04-23.json  snapshot_2026-04-24.json  snapshot_2026-04-25.json  snapshot_2026-04-26.json  snapshot_2026-04-27.json  snapshot_2026-04-28.json  snapshot_2026-04-29.json  snapshot_2026-04-30.json  snapshot_2026-05-01.json  snapshot_2026-05-02.json  snapshot_2026-05-03.json  snapshot_2026-05-04.json  snapshot_2026-05-05.json  snapshot_2026-05-06.json  snapshot_2026-05-07.json  snapshot_2026-05-08.json  snapshot_2026-05-09.json  snapshot_2026-05-10.json  snapshot_2026-05-11.json  snapshot_2026-05-12.json  snapshot_2026-05-13.json  snapshot_2026-05-14.json  snapshot_2026-05-15.json  (+70 more)
reports/: hot-report-2026-04-06.md  hot-report-2026-04-06_14-35-05.md  hot-report-2026-04-06_21-29-34.md  hot-report-2026-04-06_21-31-38.md  hot-report-2026-04-06_21-55-19.md  hot-report-2026-04-06_21-57-36.md  hot-report-2026-04-06_22-01-23.md  hot-report-2026-04-06_22-24-19.md  hot-report-2026-04-06_22-41-50.md  hot-report-2026-04-06_22-42-24.md  hot-report-2026-04-07_01-19-49.md  (+108 more)
(+12 files in other folders)
